--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Add Title Here</title>
+  <title>Pandemic</title>
 </head>
 <body>
   <div class="container">
